# Lisbon_Housing_Pricing

./: PoC.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: generate_vector_database.yml  main.yml  run_scraping_pipeline.yml
housing_data/: 07_April_2024_idealista_lisbon_listings.csv  07_April_2024_remax_lisbon_listings.csv  08_April_2024_era_lisbon_listings.csv  08_April_2024_remax_lisbon_listings.csv
scraping/: generate_vector_database.py  requirements.txt  run_scraping_pipeline.py  vectorbase_requirements.txt
scraping/era/: get_cookies.py  make_requests.py
scraping/gathered_data/: remax_portugal_06_06_2024.csv
scraping/ine/: INE - Price m2.ipynb
scraping/remax/: RemaxScraper.py  remax_all_portugal.py  remax_scrape.py
scraping/src/era/: ERAScraper.py  cookies.json
scraping/src/remax/: .remax_all_portugal.py.swp  RemaxScraper.py
scraping/vector_database_output/: house_descriptions_faiss_index  metadata.pkl
