[tool.poetry]
name = "lisbon-housing-pricing"
version = "0.1.0"
description = ""
authors = ["taketshi <83816861+taketshi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
pandas = "^2.2.2"
matplotlib = "^3.9.1"
selenium = "^4.23.1"
requests = "^2.32.3"
scikit-learn = "^1.5.1"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
